fix(notif): fixes word-wrap for notif (refs #5808)

--- a/DOCUMENT/IHM/widgets/window/notification.less
+++ b/DOCUMENT/IHM/widgets/window/notification.less
@@ -57,7 +57,7 @@
 }
 .dcpNotification--message {
   white-space: pre-line;
-  word-break: break-all;
+  word-wrap: break-word;
 }
 .dcpNotification--symbol {
   font-size: 30px;
